--- a/style.css
+++ b/style.css
@@ -1,24 +1,32 @@
-body{
-	
 
+body{
+	background-color: CornflowerBlue;
+	font-family: "Lucida Grande";
+	font-size: 18px;
 }
 
 img{
-
-
+	width: 150px;
+	height: 150px;
 }
 
 h1{
-
-
+	text-align: center;
+	font-size: 60px;
 }
 
 h2{
-
-
+	text-align: center;
+	font-size: 45px;
 }
 
 h3{
+	text-align: center;
+	font-size: 45px;
+}
 
-	
+p{
+	text-align: center;
+	border: 2px solid black;
+	border-radius: 5px;
 }
