--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body{
 }
 
 img{
-	width: 150px;
-	height: 150px;
+	width: 200px;
+	height: 200px;
 }
 
 h1{
@@ -29,4 +29,5 @@ p{
 	text-align: center;
 	border: 2px solid black;
 	border-radius: 5px;
+	padding: 10px;
 }
